docs/v2.6.3.15/_sources/gallery/experiment/sphere/sphere_coupling_vs_sampling.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_coupling_vs_sampling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_sampling.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_coupling_vs_sampling.py:


Sphere: Coupling vs sampling
============================

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-18

.. code-block:: Python

    import numpy
    from PyMieSim.experiment.detector import Photodiode
    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material
    from PyMieSim.units import nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 20-26

.. code-block:: Python

    source = Gaussian(
        wavelength=400 * nanometer,
        polarization=90 * degree,
        optical_power=1e-3 * watt,
        NA=0.2 * AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 27-28

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 28-35

.. code-block:: Python

    scatterer = Sphere(
        diameter=5000 * nanometer,
        property=Material.BK7,
        medium_property=1 * RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Defining the detector to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 37-44

.. code-block:: Python

    detector = Photodiode(
        NA=[0.2] * AU,
        phi_offset=numpy.linspace(-20, 20, 400) * degree,
        gamma_offset=0 * degree,
        sampling=[20, 40, 80, 160] * AU,
    )








.. GENERATED FROM PYTHON SOURCE LINES 45-46

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 46-48

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 49-50

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    dataframe = experiment.get('coupling')








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 54-55

.. code-block:: Python

    dataframe.plot_data(x="detector:phi_offset")



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_sampling_001.png
   :alt: sphere coupling vs sampling
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_sampling_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='degree', ylabel='watt'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.706 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_sampling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_coupling_vs_sampling.ipynb <sphere_coupling_vs_sampling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_coupling_vs_sampling.py <sphere_coupling_vs_sampling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_coupling_vs_sampling.zip <sphere_coupling_vs_sampling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
